1주차 분석중

--- a/01-Basic/02-OpenAI-LLM.ipynb
+++ b/01-Basic/02-OpenAI-LLM.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3bf28f9e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:44:14.458505Z",
+     "start_time": "2024-09-20T06:44:14.438097Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -16,10 +30,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "93ac45ce",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:44:15.464544Z",
+     "start_time": "2024-09-20T06:44:15.454100Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# .env 파일에 LANGCHAIN_API_KEY를 입력합니다.\n",
@@ -61,10 +90,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5fc161c2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:44:23.883223Z",
+     "start_time": "2024-09-20T06:44:19.603437Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[답변]: content='대한민국의 수도는 서울특별시입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 중요한 역할을 하고 있습니다.' additional_kwargs={'refusal': None} response_metadata={'token_usage': {'completion_tokens': 31, 'prompt_tokens': 16, 'total_tokens': 47, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_e375328146', 'finish_reason': 'stop', 'logprobs': None} id='run-54083e0b-7d7e-407d-b6be-20efe18ee6ce-0' usage_metadata={'input_tokens': 16, 'output_tokens': 31, 'total_tokens': 47}\n"
+     ]
+    }
+   ],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
     "\n",
@@ -91,9 +133,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2af58a9a",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:45:06.945127Z",
+     "start_time": "2024-09-20T06:45:06.227530Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 질의내용\n",
@@ -105,30 +152,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "24ecdeb9",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:52:18.256740Z",
+     "start_time": "2024-09-20T06:52:18.251139Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='대한민국의 수도는 서울입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 많은 인구와 다양한 명소를 자랑하는 도시입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 36, 'prompt_tokens': 16, 'total_tokens': 52, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_52a7f40b0b', 'finish_reason': 'stop', 'logprobs': None}, id='run-a81c6e79-1340-451b-9270-c5c48a194168-0', usage_metadata={'input_tokens': 16, 'output_tokens': 36, 'total_tokens': 52})"
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AIMessage(content='대한민국의 수도는 서울입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 많은 인구와 다양한 명소를 자랑하는 도시입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 36, 'prompt_tokens': 16, 'total_tokens': 52, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-4o-2024-05-13', 'system_fingerprint': 'fp_52a7f40b0b', 'finish_reason': 'stop', 'logprobs': None}, id='run-a81c6e79-1340-451b-9270-c5c48a194168-0', usage_metadata={'input_tokens': 16, 'output_tokens': 36, 'total_tokens': 52})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# print(response.__str__())\n",
+    "# print(response.__repr__())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:53:00.086981Z",
+     "start_time": "2024-09-20T06:53:00.082636Z"
+    }
+   },
+   "id": "946ae7be1b41ea8",
+   "execution_count": 23
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "id": "ffd49c11",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:53:57.701109Z",
+     "start_time": "2024-09-20T06:53:57.695156Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'대한민국의 수도는 서울입니다. 서울은 대한민국의 정치, 경제, 문화의 중심지로서 많은 인구와 다양한 명소를 자랑하는 도시입니다.'"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.content"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "4df69214",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:53:58.182291Z",
+     "start_time": "2024-09-20T06:53:58.174976Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'token_usage': {'completion_tokens': 36,\n  'prompt_tokens': 16,\n  'total_tokens': 52,\n  'completion_tokens_details': {'reasoning_tokens': 0}},\n 'model_name': 'gpt-4o-2024-05-13',\n 'system_fingerprint': 'fp_52a7f40b0b',\n 'finish_reason': 'stop',\n 'logprobs': None}"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "response.response_metadata"
    ]
@@ -145,9 +259,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "id": "fe733438",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:58:41.708761Z",
+     "start_time": "2024-09-20T06:58:41.111657Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 객체 생성\n",
@@ -160,9 +279,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8ae2d627",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:58:42.435550Z",
+     "start_time": "2024-09-20T06:58:41.736494Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 질의내용\n",
@@ -174,10 +298,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='대한민국의 수도는 서울입니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 15, 'prompt_tokens': 24, 'total_tokens': 39, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': {'content': [{'token': '대', 'bytes': [235, 140, 128], 'logprob': -0.022705365, 'top_logprobs': []}, {'token': '한', 'bytes': [237, 149, 156], 'logprob': -3.1281633e-07, 'top_logprobs': []}, {'token': '\\\\xeb\\\\xaf', 'bytes': [235, 175], 'logprob': -1.7432603e-06, 'top_logprobs': []}, {'token': '\\\\xbc', 'bytes': [188], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xea\\\\xb5', 'bytes': [234, 181], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': '\\\\xad', 'bytes': [173], 'logprob': 0.0, 'top_logprobs': []}, {'token': '의', 'bytes': [236, 157, 152], 'logprob': -4.246537e-06, 'top_logprobs': []}, {'token': ' 수', 'bytes': [32, 236, 136, 152], 'logprob': -6.704273e-07, 'top_logprobs': []}, {'token': '도', 'bytes': [235, 143, 132], 'logprob': -3.1281633e-07, 'top_logprobs': []}, {'token': '는', 'bytes': [235, 138, 148], 'logprob': -1.9361265e-07, 'top_logprobs': []}, {'token': ' 서', 'bytes': [32, 236, 132, 156], 'logprob': -3.4121115e-06, 'top_logprobs': []}, {'token': '\\\\xec\\\\x9a', 'bytes': [236, 154], 'logprob': 0.0, 'top_logprobs': []}, {'token': '\\\\xb8', 'bytes': [184], 'logprob': 0.0, 'top_logprobs': []}, {'token': '입니다', 'bytes': [236, 158, 133, 235, 139, 136, 235, 139, 164], 'logprob': -0.15005663, 'top_logprobs': []}, {'token': '.', 'bytes': [46], 'logprob': -3.4121115e-06, 'top_logprobs': []}], 'refusal': None}}, id='run-a3e1881f-04f8-459f-9d57-f6f265eb6d8a-0', usage_metadata={'input_tokens': 24, 'output_tokens': 15, 'total_tokens': 39})"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:55:12.831912Z",
+     "start_time": "2024-09-20T06:55:12.826236Z"
+    }
+   },
+   "id": "21a7143a56f9ad27",
+   "execution_count": 29
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "e6b0b9f7",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T06:55:00.711101Z",
+     "start_time": "2024-09-20T06:55:00.703701Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "{'token_usage': {'completion_tokens': 15,\n  'prompt_tokens': 24,\n  'total_tokens': 39,\n  'completion_tokens_details': {'reasoning_tokens': 0}},\n 'model_name': 'gpt-3.5-turbo-0125',\n 'system_fingerprint': None,\n 'finish_reason': 'stop',\n 'logprobs': {'content': [{'token': '대',\n    'bytes': [235, 140, 128],\n    'logprob': -0.022705365,\n    'top_logprobs': []},\n   {'token': '한',\n    'bytes': [237, 149, 156],\n    'logprob': -3.1281633e-07,\n    'top_logprobs': []},\n   {'token': '\\\\xeb\\\\xaf',\n    'bytes': [235, 175],\n    'logprob': -1.7432603e-06,\n    'top_logprobs': []},\n   {'token': '\\\\xbc', 'bytes': [188], 'logprob': 0.0, 'top_logprobs': []},\n   {'token': '\\\\xea\\\\xb5',\n    'bytes': [234, 181],\n    'logprob': -1.9361265e-07,\n    'top_logprobs': []},\n   {'token': '\\\\xad', 'bytes': [173], 'logprob': 0.0, 'top_logprobs': []},\n   {'token': '의',\n    'bytes': [236, 157, 152],\n    'logprob': -4.246537e-06,\n    'top_logprobs': []},\n   {'token': ' 수',\n    'bytes': [32, 236, 136, 152],\n    'logprob': -6.704273e-07,\n    'top_logprobs': []},\n   {'token': '도',\n    'bytes': [235, 143, 132],\n    'logprob': -3.1281633e-07,\n    'top_logprobs': []},\n   {'token': '는',\n    'bytes': [235, 138, 148],\n    'logprob': -1.9361265e-07,\n    'top_logprobs': []},\n   {'token': ' 서',\n    'bytes': [32, 236, 132, 156],\n    'logprob': -3.4121115e-06,\n    'top_logprobs': []},\n   {'token': '\\\\xec\\\\x9a',\n    'bytes': [236, 154],\n    'logprob': 0.0,\n    'top_logprobs': []},\n   {'token': '\\\\xb8', 'bytes': [184], 'logprob': 0.0, 'top_logprobs': []},\n   {'token': '입니다',\n    'bytes': [236, 158, 133, 235, 139, 136, 235, 139, 164],\n    'logprob': -0.15005663,\n    'top_logprobs': []},\n   {'token': '.',\n    'bytes': [46],\n    'logprob': -3.4121115e-06,\n    'top_logprobs': []}],\n  'refusal': None}}"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 결과 출력\n",
     "response.response_metadata"
