--- a/01-Basic/03-LCEL.Ipynb
+++ b/01-Basic/03-LCEL.Ipynb
@@ -11,9 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:33:29.870993Z",
+     "start_time": "2024-09-20T07:33:29.852045Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# API KEY를 환경변수로 관리하기 위한 설정 파일\n",
     "from dotenv import load_dotenv\n",
@@ -24,9 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:33:29.880674Z",
+     "start_time": "2024-09-20T07:33:29.873202Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LangSmith 추적을 시작합니다.\n",
+      "[프로젝트명]\n",
+      "CH01-Basic\n"
+     ]
+    }
+   ],
    "source": [
     "# LangSmith 추적을 설정합니다. https://smith.langchain.com\n",
     "# !pip install -qU langchain-teddynote\n",
@@ -56,8 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:33:31.697162Z",
+     "start_time": "2024-09-20T07:33:30.463470Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_teddynote.messages import stream_response  # 스트리밍 출력\n",
@@ -73,9 +107,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:37:39.593177Z",
+     "start_time": "2024-09-20T07:37:39.586880Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PromptTemplate(input_variables=['country'], template='{country}의 수도는 어디인가요?')"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# template 정의\n",
     "template = \"{country}의 수도는 어디인가요?\"\n",
@@ -87,9 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:37:39.814919Z",
+     "start_time": "2024-09-20T07:37:39.809868Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'대한민국의 수도는 어디인가요?'"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 생성\n",
     "prompt = prompt_template.format(country=\"대한민국\")\n",
@@ -98,9 +160,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:33:48.116012Z",
+     "start_time": "2024-09-20T07:33:48.110602Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'미국의 수도는 어디인가요?'"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 생성\n",
     "prompt = prompt_template.format(country=\"미국\")\n",
@@ -109,8 +185,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PromptTemplate(input_variables=['country', 'query'], template='{country}의 {query}은(는) 어디인가요?')"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# template 정의\n",
+    "template = \"{country}의 {query}은(는) 어디인가요?\"\n",
+    "\n",
+    "# from_template 메소드를 이용하여 PromptTemplate 객체 생성\n",
+    "prompt_template = PromptTemplate.from_template(template)\n",
+    "prompt_template"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:48:05.779301Z",
+     "start_time": "2024-09-20T07:48:05.773508Z"
+    }
+   },
+   "execution_count": 21
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'한국의 가장 큰 댐은(는) 어디인가요?'"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prompt = prompt_template.format(country='한국').format(query='가장 큰 댐')\n",
+    "# prompt = prompt_template.format(country='한국', query='가장 큰 댐')\n",
+    "prompt"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:48:25.995422Z",
+     "start_time": "2024-09-20T07:48:25.989662Z"
+    }
+   },
+   "execution_count": 24
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:48:31.326388Z",
+     "start_time": "2024-09-20T07:48:30.839888Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_openai import ChatOpenAI\n",
@@ -145,12 +281,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 29,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:49:58.575489Z",
+     "start_time": "2024-09-20T07:49:58.096330Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# prompt 를 PromptTemplate 객체로 생성합니다.\n",
-    "prompt = PromptTemplate.from_template(\"{topic} 에 대해 쉽게 설명해주세요.\")\n",
+    "template = \"{country}의 {query}은(는) 어디인가요?\"\n",
+    "# template = \"{topic} 에 대해 쉽게 설명해주세요.\"\n",
+    "prompt = PromptTemplate.from_template(template)\n",
     "\n",
     "model = ChatOpenAI()\n",
     "\n",
@@ -169,19 +312,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 30,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:50:27.662025Z",
+     "start_time": "2024-09-20T07:50:27.658136Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# input 딕셔너리에 주제를 '인공지능 모델의 학습 원리'으로 설정합니다.\n",
-    "input = {\"topic\": \"인공지능 모델의 학습 원리\"}"
+    "# input = {\"topic\": \"인공지능 모델의 학습 원리\"}\n",
+    "input = {\"country\": \"한국\", \"query\": \"가장 큰 댐\"}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:50:32.665765Z",
+     "start_time": "2024-09-20T07:50:30.638761Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "AIMessage(content='한국의 가장 큰 댐은 현재 소방댐으로 알려진 무학댐이 가장 큰 댐으로 알려져 있습니다. 무학댐은 경상북도 영덕군에 위치하고 있으며, 한반도에서 가장 큰 다목적 댐으로서 홍수피해 방지와 농업용수 공급 등 다양한 목적으로 사용되고 있습니다.', additional_kwargs={'refusal': None}, response_metadata={'token_usage': {'completion_tokens': 132, 'prompt_tokens': 29, 'total_tokens': 161, 'completion_tokens_details': {'reasoning_tokens': 0}}, 'model_name': 'gpt-3.5-turbo-0125', 'system_fingerprint': None, 'finish_reason': 'stop', 'logprobs': None}, id='run-55306da0-882f-40cd-b9f1-f4efe554ed2c-0', usage_metadata={'input_tokens': 29, 'output_tokens': 132, 'total_tokens': 161})"
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# prompt 객체와 model 객체를 파이프(|) 연산자로 연결하고 invoke 메서드를 사용하여 input을 전달합니다.\n",
     "# 이를 통해 AI 모델이 생성한 메시지를 반환합니다.\n",
@@ -216,8 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 32,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:54:38.101563Z",
+     "start_time": "2024-09-20T07:54:38.097551Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
@@ -234,8 +402,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T07:54:39.586094Z",
+     "start_time": "2024-09-20T07:54:39.582066Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# 프롬프트, 모델, 출력 파서를 연결하여 처리 체인을 구성합니다.\n",
@@ -244,12 +417,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-20T08:02:36.255610Z",
+     "start_time": "2024-09-20T08:01:13.228759Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "'한국의 가장 큰 댐은 용암댐입니다.용암댐은 경상북도 영주에 위치하고 있으며, 한강을 감당하기 위해 건설되었습니다. 현재 한국에서 가장 큰 댐으로 용량이 2억톤을 넘는 대형 다목적 댐입니다.'"
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m                         Traceback (most recent call last)",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\_pydevd_bundle\\pydevd_trace_dispatch.py:92\u001B[0m, in \u001B[0;36mtrace_dispatch\u001B[1;34m(py_db, frame, event, arg)\u001B[0m\n\u001B[0;32m     90\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m _trace_dispatch \u001B[38;5;129;01mis\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m:\n\u001B[0;32m     91\u001B[0m     \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[38;5;28;01mNone\u001B[39;00m\n\u001B[1;32m---> 92\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43m_trace_dispatch\u001B[49m\u001B[43m(\u001B[49m\u001B[43mpy_db\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1337\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1597\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.ThreadTracer.__call__\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1103\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:1065\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.trace_dispatch\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32m_pydevd_bundle\\pydevd_cython_win32_311_64.pyx:585\u001B[0m, in \u001B[0;36m_pydevd_bundle.pydevd_cython_win32_311_64.PyDBFrame.do_wait_suspend\u001B[1;34m()\u001B[0m\n",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py:1184\u001B[0m, in \u001B[0;36mPyDB.do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, send_suspend_message, is_unhandled_exception)\u001B[0m\n\u001B[0;32m   1181\u001B[0m         from_this_thread\u001B[38;5;241m.\u001B[39mappend(frame_id)\n\u001B[0;32m   1183\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_threads_suspended_single_notification\u001B[38;5;241m.\u001B[39mnotify_thread_suspended(thread_id, stop_reason):\n\u001B[1;32m-> 1184\u001B[0m     \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43m_do_wait_suspend\u001B[49m\u001B[43m(\u001B[49m\u001B[43mthread\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mframe\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mevent\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43marg\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43msuspend_type\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[43mfrom_this_thread\u001B[49m\u001B[43m)\u001B[49m\n",
+      "File \u001B[1;32mC:\\Program Files\\JetBrains\\PyCharm 2023.3.4\\plugins\\python\\helpers\\pydev\\pydevd.py:1199\u001B[0m, in \u001B[0;36mPyDB._do_wait_suspend\u001B[1;34m(self, thread, frame, event, arg, suspend_type, from_this_thread)\u001B[0m\n\u001B[0;32m   1196\u001B[0m             \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_call_mpl_hook()\n\u001B[0;32m   1198\u001B[0m         \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mprocess_internal_commands()\n\u001B[1;32m-> 1199\u001B[0m         time\u001B[38;5;241m.\u001B[39msleep(\u001B[38;5;241m0.01\u001B[39m)\n\u001B[0;32m   1201\u001B[0m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mcancel_async_evaluation(get_current_thread_id(thread), \u001B[38;5;28mstr\u001B[39m(\u001B[38;5;28mid\u001B[39m(frame)))\n\u001B[0;32m   1203\u001B[0m \u001B[38;5;66;03m# process any stepping instructions\u001B[39;00m\n",
+      "\u001B[1;31mKeyboardInterrupt\u001B[0m: "
+     ]
+    }
+   ],
    "source": [
     "# chain 객체의 invoke 메서드를 사용하여 input을 전달합니다.\n",
-    "input = {\"topic\": \"인공지능 모델의 학습 원리\"}\n",
+    "# input = {\"topic\": \"인공지능 모델의 학습 원리\"}\n",
+    "input = {\"country\": \"한국\", \"query\": \"가장 큰 댐\"}\n",
     "chain.invoke(input)"
    ]
   },
